--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 <link
-    href="http://cdn.pydata.org/bokeh/release/bokeh-1.3.4.min.css"
+    href="https://cdn.pydata.org/bokeh/release/bokeh-1.3.4.min.css"
     rel="stylesheet" type="text/css">
 <link
-    href="http://cdn.pydata.org/bokeh/release/bokeh-widgets-1.3.4.min.css"
+    href="https://cdn.pydata.org/bokeh/release/bokeh-widgets-1.3.4.min.css"
     rel="stylesheet" type="text/css">
-<script src="http://cdn.pydata.org/bokeh/release/bokeh-1.3.4.min.js"></script>
-<script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-1.3.4.min.js"></script>
+<script src="https://cdn.pydata.org/bokeh/release/bokeh-1.3.4.min.js"></script>
+<script src="https://cdn.pydata.org/bokeh/release/bokeh-widgets-1.3.4.min.js"></script>
 </head>
 <body>
 <H1>Ocean Map Test</H1>
