--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 <script src="https://cdn.pydata.org/bokeh/release/bokeh-widgets-1.3.4.min.js"></script>
 </head>
 <body>
-<H1>Ocean Map Test</H1>
+<H1>Ocean Map: Algae Blooms</H1>
 
 {{ script|safe }}
 {{ div|safe }}
